--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ title: Cestovka
 <section class="trips">
 
     <a href="#" class="trip">
-      <img class="trip__image" src="/images/palmy.jpg" alt="Palmy">
+      <img class="trip__image" src="/images/palmy.png" alt="Palmy">
       <div class="trip__price">
         17&nbsp;600 Kč
       </div>
@@ -16,7 +16,7 @@ title: Cestovka
     </a>
 
     <a href="#" class="trip">
-      <img class="trip__image" src="/images/jezero2.jpg" alt="Jezero">
+      <img class="trip__image" src="/images/jezero2.png" alt="Jezero">
       <div class="trip__price">
         8&nbsp;490 Kč
       </div>
@@ -26,7 +26,7 @@ title: Cestovka
     </a>
 
     <a href="#" class="trip">
-      <img class="trip__image" src="/images/nakole.jpg" alt="Na kole">
+      <img class="trip__image" src="/images/nakole.png" alt="Na kole">
       <div class="trip__price">
         4&nbsp;990 Kč
       </div>
@@ -82,7 +82,7 @@ title: Cestovka
     <div class="trips trips--right">
 
       <a href="#" class="trip">
-        <img class="trip__image" src="/images/lodicka.jpg" alt="Lodička">
+        <img class="trip__image" src="/images/lodicka.png" alt="Lodička">
         <div class="trip__price">
           17&nbsp;600 Kč
         </div>
@@ -93,7 +93,7 @@ title: Cestovka
       </a>
 
       <a href="#" class="trip">
-        <img class="trip__image" src="/images/podkova.jpg" alt="Grand Canyon">
+        <img class="trip__image" src="/images/podkova.png" alt="Grand Canyon">
         <div class="trip__price">
           18&nbsp;500 Kč
         </div>
@@ -103,7 +103,7 @@ title: Cestovka
       </a>
 
       <a href="#" class="trip">
-        <img class="trip__image" src="/images/zatoka.jpg" alt="Zátoka">
+        <img class="trip__image" src="/images/zatoka.png" alt="Zátoka">
         <div class="trip__price">
           8&nbsp;900 Kč
         </div>
